# PaperTTY

./: pyproject.toml
papertty/: papertty.py
papertty/drivers/: driver_it8951.py  drivers_partial.py  test.py  usb_it8951.py
