[tool.poetry]
name = "papertty"
version = "0.1.8"
description = "Python module to render a TTY or VNC on e-ink"
authors = ["Jouko Strömmer <jouko.strommer@iki.fi>"]
readme = "README.md"
repository = "https://github.com/joukos/PaperTTY"
homepage = "https://github.com/joukos/PaperTTY"

[tool.poetry.dependencies]
click = "^7.1.2"
Pillow = "10.4.0"
python = "^3.9"
gpiozero = "^2.0.0"
lgpio    = "^0.2.0.0"
"RPi.GPIO" = "^0.7.1"
spidev = "^3.6"
vncdotool = "^1.2.0"

[tool.poetry.scripts]
papertty = "papertty.papertty:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
